Fix duplicate all-approvals tab on admin sidebar; fix app-footer alignment

--- a/src/app/layout/company-layout/company-layout.component.css
+++ b/src/app/layout/company-layout/company-layout.component.css
@@ -1,5 +1,9 @@
+.company {
+  min-height: calc(0.835 * 100vh);
+  @apply bg-slate-200;
+}
+
 .main-area {
   margin-top: 4rem;
   flex: 0.8;
-  @apply bg-slate-200;
 }
